--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,9 +1,11 @@
 dev:
-  service: S3
-  access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY_ID') %>
-  secret_access_key: <%= ENV.fetch('AWS_SECRET_ACCESS_KEY') %>
-  region: <%= ENV.fetch('AWS_REGION') %>
-  bucket: <%= ENV.fetch('S3_BUCKET_NAME') %>
+  service: Disk
+  root: <%= Rails.root.join("tmp/storage/test") %>
+#  service: S3
+#  access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY_ID') %>
+#  secret_access_key: <%= ENV.fetch('AWS_SECRET_ACCESS_KEY') %>
+#  region: <%= ENV.fetch('AWS_REGION') %>
+#  bucket: <%= ENV.fetch('S3_BUCKET_NAME') %>
 
 test:
   service: Disk
