--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "intl-pluralrules": "^1.3.1",
     "jshint": "^2.11.0",
     "jspdf": "^2.0.0",
+    "linked-sliders": "^0.2.0",
     "lodash": "^4.17.11",
     "luxon": "^2.3.0",
     "mui-datatables": "^4.0.0",
