--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
     "intl-pluralrules": "^1.3.1",
+    "js-cookie": "^3.0.1",
     "jshint": "^2.11.0",
     "jspdf": "^2.0.0",
     "linked-sliders": "^0.2.0",
