--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
     "intl-pluralrules": "^1.3.1",
-    "js-cookie": "^3.0.1",
     "jshint": "^2.11.0",
     "jspdf": "^2.0.0",
     "linked-sliders": "^0.2.0",
@@ -66,6 +65,7 @@
     "rails-erb-loader": "^5.4.1",
     "react": "^17.0.2",
     "react-autosuggest": "^10.0.0",
+    "react-cookie-consent": "^7.3.1",
     "react-devtools": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.13.2",
