--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "3.7.7",
   "license": "UNLICENSED",
   "dependencies": {
-    "@babel/core": "^7.0.0-0",
+    "@babel/core": "7",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/plugin-transform-runtime": "7",
+    "@babel/preset-env": "7",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.13.0",
+    "@babel/runtime": "7",
     "@date-io/luxon": "^2.11.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -34,9 +35,10 @@
     "add": "^2.0.6",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.26.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "8",
     "babel-preset-react": "^6.24.1",
     "city-timezones": "^1.2.0",
+    "compression-webpack-plugin": "9",
     "d3-array": "^3.1.1",
     "d3-color": "^3.0.1",
     "d3-scale-chromatic": "^3.0.0",
@@ -84,16 +86,20 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "resize-observer-hook": "^1.0.5",
+    "shakapacker": "6.2.0",
+    "terser-webpack-plugin": "5",
     "ts-loader": "^9.2.6",
     "typescript": "^4.2.3",
-    "webpack": "^4.0.0",
+    "webpack": "5",
+    "webpack-assets-manifest": "5",
+    "webpack-merge": "5",
     "whatwg-fetch": "^3.0.0",
     "yarn": "^1.15.2"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-cli": "4",
+    "webpack-dev-server": "^4.8.1"
   }
 }
