--- a/package.json
+++ b/package.json
@@ -1,99 +1,97 @@
 {
-  "name": "CoLab",
-  "version": "3.7.7",
-  "license": "UNLICENSED",
+  "name": "app",
+  "private": true,
   "dependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.13.0",
-    "@date-io/luxon": "^2.11.1",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fullcalendar/core": "^5.0.0",
-    "@fullcalendar/daygrid": "^5.0.0",
-    "@fullcalendar/list": "^5.0.0",
-    "@fullcalendar/luxon": "^5.0.0",
-    "@fullcalendar/react": "^5.0.0",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/lab": "^5.0.0-alpha.64",
-    "@mui/material": "^5.2.8",
-    "@mui/styles": "^5.2.3",
-    "@rails/webpacker": "^5.0.1",
+    "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.17.9",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/luxon": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.76",
+    "@mui/material": "^5.6.0",
+    "@mui/styles": "^5.6.0",
     "@react-spring/parallax": "^9.4.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.23",
     "@visx/curve": "^2.1.0",
-    "@visx/react-spring": "^2.6.0",
     "@visx/scale": "^2.2.2",
     "@visx/shape": "^2.4.0",
-    "@visx/text": "^2.3.0",
     "@visx/xychart": "^2.9.0",
-    "add": "^2.0.6",
-    "autosuggest-highlight": "^3.1.1",
-    "axios": "^0.26.0",
-    "babel-loader": "^8.0.6",
-    "babel-preset-react": "^6.24.1",
+    "autosuggest-highlight": "^3.2.1",
+    "axios": "^0.26.1",
+    "babel-loader": "^8.2.4",
     "city-timezones": "^1.2.0",
-    "d3-array": "^3.1.1",
-    "d3-color": "^3.0.1",
+    "compression-webpack-plugin": "^9.2.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "d3-color": "^3.1.0",
     "d3-scale-chromatic": "^3.0.0",
-    "draft-js": "^0.11.1",
-    "draftjs-to-html": "^0.9.0",
-    "electron": "^18.0.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "email-validator": "^2.0.4",
-    "html-to-draftjs": "^1.4.0",
-    "html2canvas": "^1.0.0-alpha.11",
-    "i18next": "^21.5.3",
-    "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-fetch-backend": "^4.1.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.3",
+    "html-to-draftjs": "^1.5.0",
+    "html2canvas": "^1.4.1",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-fetch-backend": "^4.1.1",
     "i18next-intervalplural-postprocessor": "^3.0.0",
     "i18next-localstorage-cache": "^1.1.1",
-    "immutable": "^4.0.0-rc.12",
-    "install": "^0.13.0",
-    "intl-pluralrules": "^1.3.1",
-    "jshint": "^2.11.0",
-    "jspdf": "^2.0.0",
     "linked-sliders": "^0.2.0",
-    "lodash": "^4.17.11",
-    "luxon": "^2.3.0",
-    "mui-datatables": "^4.0.0",
-    "postcss-cssnext": "^3.1.0",
-    "promise-polyfill": "^8.1.3",
-    "prop-types": "^15.6.1",
-    "rails-erb-loader": "^5.4.1",
+    "luxon": "^2.3.1",
+    "mini-css-extract-plugin": "^2.6.0",
+    "mui-datatables": "https://github.com/gregnb/mui-datatables",
+    "promise-polyfill": "^8.2.3",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-autosuggest": "^10.0.0",
-    "react-cookie-consent": "^7.3.1",
-    "react-devtools": "^4.7.0",
+    "react-autosuggest": "^10.1.0",
+    "react-cookie-consent": "^7.4.1",
     "react-dom": "^18.0.0",
-    "react-draft-wysiwyg": "^1.13.2",
-    "react-draggable": "^4.0.3",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-draggable": "^4.4.4",
     "react-google-login": "^5.2.2",
-    "react-i18next": "^11.2.7",
-    "react-joyride": "^2.2.1",
-    "react-redux": "^7.2.1",
-    "react-render-html": "^0.6.0",
-    "react-router-dom": "^6.2.1",
-    "react-spring": "^9.4.2",
-    "react-virtualized": "^9.21.0",
-    "react_ujs": "^2.5.0",
-    "reactjs-popup": "^2.0.4",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
+    "react-i18next": "^11.16.2",
+    "react-joyride": "^2.4.0",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "6",
+    "react-spring": "^9.4.4",
+    "react-virtualized": "^9.22.3",
+    "react_ujs": "^2.6.2",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "resize-observer-hook": "^1.0.5",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.2.3",
-    "webpack": "^4.0.0",
-    "whatwg-fetch": "^3.0.0",
-    "yarn": "^1.15.2"
+    "shakapacker": "^6.2.0",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.1",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0",
+    "webpack-assets-manifest": "^5.1.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0",
+    "webpack-sources": "^3.2.3",
+    "whatwg-fetch": "^3.6.2"
   },
+  "version": "0.1.0",
+  "babel": {
+    "presets": [
+      "./node_modules/shakapacker/package/babel/preset.js"
+    ]
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
-    "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0"
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "react-refresh": "^0.12.0",
+    "webpack-dev-server": "^4.8.1"
   }
 }
