--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.0",
     "@react-spring/parallax": "^9.4.4",
+    "@toast-ui/react-calendar": "^1.0.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.23",
