--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@visx/shape": "^2.4.0",
     "@visx/xychart": "^2.9.0",
     "autosuggest-highlight": "^3.2.1",
-    "axios": "^0.26.1",
+    "axios": "^0.27.0",
     "babel-loader": "^8.2.4",
     "city-timezones": "^1.2.0",
     "compression-webpack-plugin": "^9.2.0",
@@ -39,7 +39,6 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "email-validator": "^2.0.4",
-    "fork-ts-checker-webpack-plugin": "^7.2.3",
     "html-to-draftjs": "^1.5.0",
     "html2canvas": "^1.4.1",
     "i18next": "^21.6.14",
@@ -70,10 +69,11 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "resize-observer-hook": "^1.0.5",
-    "shakapacker": "6.2.0",
+    "shakapacker": "6.2.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "typescript": "^4.6.3",
+    "url": "^0.11.0",
     "webpack": "^5.72.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "^4.9.2",
