--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     image: colab_app
     ports:
       - '31337:31337'
-    secrets:
-      - ssh_key
     volumes:
       - src:/home/colab/src/app
       - asdf-installs:/home/colab/.asdf/installs
   db:
     image: colab_db
+    volumes:
+      - mariadb-data:/var/lib/mysql
   browser:
     image: colab_browser
     ports:
@@ -21,7 +21,5 @@ services:
 volumes:
   src:
   asdf-installs:
+  mariadb-data:
 
-secrets:
-  ssh_key:
-    file: ~/.ssh/id_rsa
